<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent">


            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/default_profile_image"

                />


            <Button
                android:id="@+id/profile_edit_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/profile_edit_image_button" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_username"
                    style="@style/profile_text_styles"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:gravity="end|center"
                    android:paddingStart="0dp"
                    android:paddingEnd="10dp"
                    android:text="@string/profile_username"
                    android:textAlignment="textEnd"
                    app:layout_constraintBottom_toBottomOf="@id/profile_username_input_text"
                    app:layout_constraintEnd_toStartOf="@+id/profile_username_input_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/profile_username_input_text"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:autofillHints="Default username"
                    android:gravity="start|bottom"
                    android:hint="User name here"
                    android:inputType="textPersonName"

                    app:layout_constraintLeft_toRightOf="@+id/profile_username"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/profile_username" />

                <TextView
                    android:id="@+id/profile_age"
                    style="@style/profile_text_styles"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:gravity="end|center"
                    android:paddingStart="0dp"
                    android:paddingEnd="10dp"

                    android:text="@string/profile_age"
                    android:textAlignment="textEnd"
                    app:layout_constraintBottom_toBottomOf="@id/profile_age_input_text"
                    app:layout_constraintLeft_toLeftOf="parent"


                    app:layout_constraintRight_toLeftOf="@id/profile_age_input_text"
                    app:layout_constraintTop_toBottomOf="@id/profile_username" />

                <EditText
                    android:id="@+id/profile_age_input_text"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:autofillHints="20"

                    android:hint="Age number"
                    android:inputType="number"
                    app:layout_constraintLeft_toRightOf="@id/profile_age"
                    app:layout_constraintRight_toRightOf="parent"


                    app:layout_constraintTop_toBottomOf="@+id/profile_username_input_text" />

                <TextView
                    android:id="@+id/profile_gender"
                    style="@style/profile_text_styles"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:gravity="end|center"
                    android:paddingStart="0dp"
                    android:paddingEnd="10dp"

                    android:text="@string/profile_gender"
                    android:textAlignment="textEnd"


                    app:layout_constraintEnd_toStartOf="@+id/profile_age_input_text"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_age_input_text" />

                <Spinner
                    android:id="@+id/profile_gender_spinner"
                    android:layout_width="0dp"
                    android:layout_height="48dp"

                    app:layout_constraintEnd_toEndOf="@id/profile_age_input_text"
                    app:layout_constraintLeft_toRightOf="@id/profile_gender"
                    app:layout_constraintTop_toBottomOf="@id/profile_age_input_text"


                    />

                <TextView
                    android:id="@+id/selectedGenderTextView"
                    style="@style/profile_text_styles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"

                    android:gravity="start|bottom"
                    app:layout_constraintEnd_toStartOf="@+id/profile_gender_spinner"
                    app:layout_constraintLeft_toRightOf="@id/profile_gender"
                    app:layout_constraintStart_toEndOf="@+id/profile_gender"
                    app:layout_constraintTop_toBottomOf="@id/profile_age_input_text" />

                <TextView
                    android:id="@+id/profile_birthday"
                    style="@style/profile_text_styles"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:gravity="end|center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"

                    android:text="@string/profile_birthday"
                    android:textAlignment="textEnd"
                    app:layout_constraintBottom_toBottomOf="@id/profile_birthday_input"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/profile_birthday_input"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_gender_spinner" />

                <EditText
                    android:id="@+id/profile_birthday_input"
                    style="@style/profile_text_styles"
                    android:layout_width="0dp"
                    android:layout_height="48dp"

                    android:autofillHints="1/1/1990"
                    android:hint="Select birthday"
                    android:inputType="date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toRightOf="@id/profile_birthday"
                    app:layout_constraintStart_toEndOf="@+id/profile_birthday"
                    app:layout_constraintTop_toBottomOf="@id/profile_gender_spinner"

                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ScrollView
                android:id="@+id/bio_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="15dp">

                <!--should this be textview or editview??-->
                <EditText
                    android:id="@+id/profile_bio_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"

                    android:text="@string/profile_bio_text" />
            </ScrollView>


            <!--button to save user profile description-->
            <Button
                android:id="@+id/profile_bio_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>